logs/turtlesim/build.make.046.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:154:31: error: expected primary-expression before ‘(’ token
       QRect rectangle2 = QRect(0.5 * turtle_rotated_image_.width() , 0.5 * turtle_rotated_image_.height();, 300, 300);
                               ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:154:106: error: expected ‘)’ before ‘;’ token
       QRect rectangle2 = QRect(0.5 * turtle_rotated_image_.width() , 0.5 * turtle_rotated_image_.height();, 300, 300);
                                                                                                          ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:154:107: error: expected primary-expression before ‘,’ token
       QRect rectangle2 = QRect(0.5 * turtle_rotated_image_.width() , 0.5 * turtle_rotated_image_.height();, 300, 300);
                                                                                                           ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:155:52: error: no matching function for call to ‘QPainter::drawImage(QRect&, double, double)’
       path_painter.drawImage(rectangle2, 20.0, 15.0);
                                                    ^
In file included from /usr/include/x86_64-linux-gnu/qt5/QtGui/QPainter:1:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:48,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:387:10: note: candidate: void QPainter::drawImage(const QRectF&, const QImage&, const QRectF&, Qt::ImageConversionFlags)
     void drawImage(const QRectF &targetRect, const QImage &image, const QRectF &sourceRect,
          ^~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:387:10: note:   no known conversion for argument 2 from ‘double’ to ‘const QImage&’
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:822:13: note: candidate: void QPainter::drawImage(const QRect&, const QImage&, const QRect&, Qt::ImageConversionFlags)
 inline void QPainter::drawImage(const QRect &targetRect, const QImage &image, const QRect &sourceRect,
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:822:13: note:   no known conversion for argument 2 from ‘double’ to ‘const QImage&’
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:828:13: note: candidate: void QPainter::drawImage(const QPointF&, const QImage&, const QRectF&, Qt::ImageConversionFlags)
 inline void QPainter::drawImage(const QPointF &p, const QImage &image, const QRectF &sr,
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:828:13: note:   no known conversion for argument 1 from ‘QRect’ to ‘const QPointF&’
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:834:13: note: candidate: void QPainter::drawImage(const QPoint&, const QImage&, const QRect&, Qt::ImageConversionFlags)
 inline void QPainter::drawImage(const QPoint &p, const QImage &image, const QRect &sr,
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:834:13: note:   no known conversion for argument 1 from ‘QRect’ to ‘const QPoint&’
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:841:13: note: candidate: void QPainter::drawImage(const QRectF&, const QImage&)
 inline void QPainter::drawImage(const QRectF &r, const QImage &image)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:841:13: note:   candidate expects 2 arguments, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:846:13: note: candidate: void QPainter::drawImage(const QRect&, const QImage&)
 inline void QPainter::drawImage(const QRect &r, const QImage &image)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:846:13: note:   candidate expects 2 arguments, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:397:10: note: candidate: void QPainter::drawImage(const QPointF&, const QImage&)
     void drawImage(const QPointF &p, const QImage &image);
          ^~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:397:10: note:   candidate expects 2 arguments, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:851:13: note: candidate: void QPainter::drawImage(const QPoint&, const QImage&)
 inline void QPainter::drawImage(const QPoint &p, const QImage &image)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:851:13: note:   candidate expects 2 arguments, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:856:13: note: candidate: void QPainter::drawImage(int, int, const QImage&, int, int, int, int, Qt::ImageConversionFlags)
 inline void QPainter::drawImage(int x, int y, const QImage &image, int sx, int sy, int sw, int sh,
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:856:13: note:   no known conversion for argument 1 from ‘QRect’ to ‘int’
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
